# pyscsa

./: 404.html  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  readthedocs.yaml  render.yaml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: deploy-mkdocs.yml  tests.yml
api/: index.html  main.py  requirements.txt
contributing/: index.html
docs/: Makefile  requirements.txt
docs/source/: api.rst  conf.py  examples.rst  installation.rst  quickstart.rst  theory.rst
examples/: index.html
examples/notebooks/: 01_basic_1d_reconstruction.ipynb  02_signal_filtering.ipynb
examples/notebooks/.ipynb_checkpoints/: 01_basic_1d_reconstruction-checkpoint.ipynb
examples/scripts/: batch_processing.py
examples/scripts/.ipynb_checkpoints/: compare_methods-checkpoint.py
installation/: index.html
interactive/: index.html
mkdocs/: api.md  contributing.md  examples.md  index.md  installation.md  interactive.md  quickstart.md  tests.md  theory.md
pyscsa/: __init__.py  cli.py  core.py  filters.py  metrics.py  scsa_gpu.py  utils.py  visualization.py
pyscsa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyscsa/examples/: __init__.py  benchmark.py  image_reconstruction.py  signal_denoising.py
quickstart/: index.html
search/: search_index.json
tests/: index.html  test_gpu.py  test_scsa1d.py  test_scsa2d.py  test_utils.py  test_visualization.py
theory/: index.html
