[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pyscsa"
dynamic = ["version"]
description = "Semi-Classical Signal Analysis for signal and image processing"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Boost", email = "boost@inria.fr"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Signal Processing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.5.0",
    "scikit-learn>=0.23.0",
    "matplotlib>=3.2.0",
    "pandas>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.900",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=0.5",
    "numpydoc>=1.1",
]

[tool.setuptools_scm]

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
source = ["pyscsa"]
omit = ["*/tests/*", "*/examples/*"]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
